--- a/threads/Taskfile.yml
+++ b/threads/Taskfile.yml
@@ -9,8 +9,8 @@ tasks:
       - go test -v ./...
   docker-test:
     cmds:
-      - docker build --rm --target test -t strips-tt/test .
-      - docker run --rm -e REQUEST_STR="https://httpbin.org/delay/10" -e GOMAXPROCS=2 strips-tt/test
+      - docker build --rm --target test -t go-experiments/test .
+      - docker run --rm -e REQUEST_STR="https://httpbin.org/delay/10" -e GOMAXPROCS=2 go-experiments/test
   test-local-sleeper:
     cmds:
       - docker-compose up --build -d
